--- a/proyecto2.2/Makefile
+++ b/proyecto2.2/Makefile
@@ -4,7 +4,7 @@ all: interprete run
 interprete:
 	flex pylex.l
 	bison --report=state -dv pypar.y -o pypar.cpp
-	g++ -std=c++11 pylex.cpp pypar.cpp composite.cpp builder.cpp  tabla_de_simbolos.cpp  -o proyecto
+	g++ pypar.cpp pylex.cpp builder.cpp composite.cpp  tabla_de_simbolos.cpp  -o proyecto
 clean:
 	rm *tab*
 	rm lex.yy.c
