--- a/proyecto2.2/Makefile
+++ b/proyecto2.2/Makefile
@@ -1,12 +1,13 @@
+all: compila run
 
-all: interprete run
-
-interprete:
-	flex pylex.l
-	bison --report=state -dv pypar.y -o pypar.cpp
-	g++ pypar.cpp pylex.cpp builder.cpp composite.cpp  tabla_de_simbolos.cpp  -o proyecto
-clean:
-	rm *tab*
-	rm lex.yy.c
+compila:
+	g++ composite.cpp  -o composite -c
+	g++ builder.cpp  -o builder -c
+	g++ visitor.cpp -o visitor
 run: 	
-	./proyecto prueba_de_fuego.py
+	./visitor
+clean:
+	rm builder
+	rm visitor
+	rm composite
+	
