--- a/proyecto2.2/Makefile
+++ b/proyecto2.2/Makefile
@@ -3,7 +3,7 @@ all: interprete run
 interprete:
 	flex pylex.l
 	bison --report=state -dv pypar.y -o pypar.cpp
-	g++ pypar.cpp pylex.cpp builder.cpp composite.cpp tabla_de_simbolos.cpp -o proyecto
+	g++  -std=c++11  pypar.cpp pylex.cpp -o proyecto
 clean:
 	rm *tab*
 	rm lex.yy.c
